--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     <header class="hero" id="hero">
         <div class="container animate-on-scroll">
             <!-- 🖼️ 2. ESPAÇO PARA LOGO NO HEADER -->
-            <img src="https://res.cloudinary.com/dwizotx2l/image/upload/v1751561946/ChatGPT_Image_3_de_jul._de_2025_08_27_31_g8kqmp.png" class="logo-img">
+            <img src="https://res.cloudinary.com/dwizotx2l/image/upload/v1751562183/Sem_nome_600_x_600_px_2_yzhxir.png" class="logo-img">
 
             <h1>Ative agora o motor da sua empresa com os Pacotes X.0</h1>
             <p class="subheadline">Escolha um plano pronto ou crie o seu com total liberdade estratégica</p>
