--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             <h1>Ative agora o motor da sua empresa com os Pacotes X.0</h1>
             <p class="subheadline">Escolha um plano pronto ou crie o seu com total liberdade estratégica</p>
             <a href="#packages" class="btn btn-primary">Ver Pacotes</a>
-            <div class="visual-placeholder">Visual Placeholder</div>
+            <div class="https://res.cloudinary.com/dwizotx2l/image/upload/v1751561946/ChatGPT_Image_3_de_jul._de_2025_08_27_31_g8kqmp.png">Visual Placeholder</div>
         </div>
     </header>
 
